# elementary_cellular_automata

./: CMakeLists.txt  README.md  main.cpp
headers/: mainwindow.h
sources/: mainwindow.cpp
